# lab3

./: CMakeLists.txt  Chart.cpp  Chart.h  IOCContainer.h  chartDrawer.cpp  chartDrawer.h  dataReader.cpp  dataReader.h  main.cpp  mainwindow.cpp  mainwindow.h  themewidget.cpp  themewidget.h
